javacopy/exam1/rrr
LegalVariableNames.java:6: error: not a statement
    System.out;
          ^
1 error
